- Changed email address. - Corrected the making of a list of messages which have to be deleted for a given account.   This will fix multiple messages removal from one server.

BUG: 128361

svn path=/branches/KDE/3.5/kdepim/; revision=553500